# SushiBLAS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: CONTRIBUTING.md  STYLE_GUIDE.md
examples/: CMakeLists.txt  example.cpp  io_example.cpp
include/SushiBLAS/: SushiBLAS.h  engine.hpp  storage.hpp  tensor.hpp
include/SushiBLAS/core/: common.hpp  export.hpp  logger.hpp  storage.hpp  tensor.hpp
include/SushiBLAS/ops/: blas.hpp  io.hpp
include/SushiBLAS/ops/blas/: level1.hpp  level2.hpp  level3.hpp  sparse.hpp  utils.hpp
include/SushiBLAS/ops/lapack/: linalg.hpp
include/SushiBLAS/ops/logic/: logic.hpp
include/SushiBLAS/ops/math/: activations.hpp  elementwise.hpp  nonlinear.hpp  random.hpp  reductions.hpp
include/SushiBLAS/ops/signal/: transforms.hpp
include/SushiRuntime/: SushiRuntime.h
include/SushiRuntime/core/: common.hpp  export.hpp  logger.hpp  ref_counted.hpp  sushi_ptr.hpp
include/SushiRuntime/execution/: runtime_context.hpp
include/SushiRuntime/graph/: dependency_tracker.hpp  node.hpp  task_graph.hpp  task_types.hpp
include/SushiRuntime/memory/: memory_pool.hpp  usm_allocator.hpp
include/SushiRuntime/scheduler/: event_polling.hpp  task.hpp  task_scheduler.hpp
include/SushiRuntime/topology/: hw_discovery.hpp  numa_mapper.hpp
lib/: sushiruntime.lib
scripts/linux/: build.sh  clear.sh  config.cfg  doxygen.sh  run.sh
scripts/win/: clear.bat  doxygen.bat  run.bat
scripts/windows/: build.bat  config.ini  run.bat
src/: CMakeLists.txt  engine.cpp  io.cpp  main.cpp
src/ops/: io.cpp
src/ops/blas/level1/: asum.cpp  axpy.cpp  copy.cpp  dot.cpp  iamax.cpp  level1_internal.hpp  nrm2.cpp  rot.cpp  scal.cpp  swap.cpp
src/ops/blas/level2/: gemv.cpp  ger.cpp  symv.cpp  syr.cpp  syr2.cpp  trmv.cpp  trsv.cpp
src/ops/blas/level3/: gemm.cpp  syrk.cpp  trsm.cpp
src/ops/logic/: all.cpp  any.cpp  equal.cpp  greater.cpp  greater_equal.cpp  less.cpp  less_equal.cpp  logic_internal.hpp  logical_and.cpp  logical_not.cpp  logical_or.cpp  logical_xor.cpp  not_equal.cpp  where.cpp
src/ops/math/elementwise/: abs.cpp  acos.cpp  acosh.cpp  add.cpp  asin.cpp  asinh.cpp  atan.cpp  atanh.cpp  ceil.cpp  clamp.cpp  cos.cpp  cosh.cpp  div.cpp  ew_internal.hpp  exp.cpp  floor.cpp  fmod.cpp  log.cpp  max.cpp  min.cpp  mul.cpp  neg.cpp  pow.cpp  reciprocal.cpp  remainder.cpp  round.cpp  sin.cpp  sinh.cpp  sqrt.cpp  square.cpp  sub.cpp  tan.cpp
src/ops/math/nonlinear/: elu.cpp  gelu.cpp  leaky_relu.cpp  nonlinear_internal.hpp  relu.cpp  sigmoid.cpp  silu.cpp  softplus.cpp  tanh.cpp
src/ops/math/random/: bernoulli.cpp  constant.cpp  discrete_uniform.cpp  exponential.cpp  he_normal.cpp  he_uniform.cpp  log_normal.cpp  normal.cpp  orthogonal.cpp  poisson.cpp  random_internal.hpp  set_seed.cpp  shuffle.cpp  truncated_normal.cpp  uniform.cpp  xavier_normal.cpp  xavier_uniform.cpp
tests/: CMakeLists.txt  test_common.hpp  test_main.cpp
tests/blas/level1/: test_asum.cpp  test_axpy.cpp  test_copy.cpp  test_dot.cpp  test_iamax.cpp  test_nrm2.cpp  test_rot.cpp  test_scal.cpp  test_swap.cpp
tests/blas/level2/: test_gemv.cpp  test_ger.cpp  test_symv.cpp  test_syr.cpp  test_syr2.cpp  test_trmv.cpp  test_trsv.cpp
tests/blas/level3/: test_gemm.cpp  test_syrk.cpp  test_trsm.cpp
tests/logic/: test_all.cpp  test_any.cpp  test_equal.cpp  test_greater.cpp  test_greater_equal.cpp  test_less.cpp  test_less_equal.cpp  test_logical_and.cpp  test_logical_not.cpp  test_logical_or.cpp  test_logical_xor.cpp  test_not_equal.cpp  test_where.cpp
tests/math/elementwise/: test_abs.cpp  test_acos.cpp  test_acosh.cpp  test_add.cpp  test_asin.cpp  test_asinh.cpp  test_atan.cpp  test_atanh.cpp  test_ceil.cpp  test_clamp.cpp  test_cos.cpp  test_cosh.cpp  test_div.cpp  test_exp.cpp  test_floor.cpp  test_fmod.cpp  test_log.cpp  test_max.cpp  test_min.cpp  test_mul.cpp  test_neg.cpp  test_pow.cpp  test_reciprocal.cpp  test_remainder.cpp  test_round.cpp  test_sin.cpp  test_sinh.cpp  test_sqrt.cpp  test_square.cpp  test_sub.cpp  test_tan.cpp
tests/math/nonlinear/: test_elu.cpp  test_gelu.cpp  test_leaky_relu.cpp  test_relu.cpp  test_sigmoid.cpp  test_silu.cpp  test_softplus.cpp  test_tanh.cpp
tests/math/random/: test_constant.cpp  test_distributions.cpp  test_initializers.cpp  test_normal.cpp  test_uniform.cpp
tests/runtime/: test_dependency_stress.cpp  test_framework_sim.cpp
